--- a/AutomationBricks/Cloud/VM/__namespace__.yaml
+++ b/AutomationBricks/Cloud/VM/__namespace__.yaml
@@ -3,7 +3,7 @@ object_type: namespace
 version: 1.0
 object:
   attributes:
-    name: CustomStateMachines
+    name: VM
     description: 
     display_name: 
     priority: 
