--- a/AutomationBricks/Integration/CloudForms/CustomStateMachines.class/__methods__/launch_state_machine.yaml
+++ b/AutomationBricks/Integration/CloudForms/CustomStateMachines.class/__methods__/launch_state_machine.yaml
@@ -3,7 +3,7 @@ object_type: method
 version: 1.0
 object:
   attributes:
-    name: get_state_machine
+    name: launch_state_machine
     display_name: 
     description: 
     scope: instance
